--- a/layouts/global-footer/law/law.scss
+++ b/layouts/global-footer/law/law.scss
@@ -1,6 +1,6 @@
 .global-footer--bottom {
-  width: 100%;
-  height: calc(131 / 1080 * 100vh);
+  width: 100vw;
+  height: 22.713643vh;
   background: url("~@/assets/image/common/bottom-line.png")
     no-repeat center;
   background-size: 100% 100%;
