--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -1,5 +1,5 @@
 .mosi-layout {
-  height: 100%;
+  // height: 100%;
   background-color: transparent;
   .mosi-layout__header {
     position: fixed;
