--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -23,13 +23,11 @@ p {
 }
 html,
 body {
+  overflow: auto;
   width: 100%;
   height: 100%;
   font-size: 16px;
   box-sizing: border-box;
-}
-body {
-  overflow: hidden;
 }
 
 article,
