--- a/layouts/layout.scss
+++ b/layouts/layout.scss
@@ -1,11 +1,12 @@
 .mosi-layout {
   height: 100%;
   background-color: transparent;
+  font-family: $fontFamily;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   .mosi-layout__header {
     position: fixed;
     width: 100%;
-    // 滚动透明度
-    // background-color: rgba($color: #000000, $alpha: 1);
     border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.2);
     z-index: 1000;
   }
@@ -17,7 +18,6 @@
   }
   .mosi-layout__content {
     background-color: black;
-    // background-color: #fafafa;
   }
   .mosi-layout__footer {
     padding: 0;
@@ -39,11 +39,7 @@
       left: 50%;
       transform: translate(-50%,-50%);
       width: 1.1vw;
-      // height: 1.3vw;
     }
-    // color: #fff;
-    // text-align: center;
-    // border-radius: 2px;
   }
   .back-show {
     opacity: 1;
