--- a/components/home-page/application-direction/ApplicationDirection.scss
+++ b/components/home-page/application-direction/ApplicationDirection.scss
@@ -1,33 +1,33 @@
 @import '~@/assets/styles/common/itemLayout.scss';
-::v-deep .swiper {
-  height: 49.475262vh;
-  width: 100vw;
-  .swiper__item{
-    padding: 2.398801vh 11.2vw;
-    width: 78.666667vw;
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 1);
-    border-radius: 6px;
-    img {
-      width: 56.533333vw;
-      height: 32.233883vh;
-    }
-  }
-  .swiper-container {
-    width: 100%;
-    height: 49.475262vh;
-    .swiper-slide {
-      opacity: 0.4;
-    }
-    .swiper-slide-prev,
-    .swiper-slide-next {
-      opacity: 0.8;
-    }
-    .swiper-slide-active {
-      opacity: 1;
-      z-index: 1000;
-    }
-  }
-}
+// ::v-deep .swiper {
+//   height: 49.475262vh;
+//   width: 100vw;
+//   .swiper__item{
+//     padding: 2.398801vh 11.2vw;
+//     width: 78.666667vw;
+//     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 1);
+//     border-radius: 6px;
+//     img {
+//       width: 56.533333vw;
+//       height: 32.233883vh;
+//     }
+//   }
+//   .swiper-container {
+//     width: 100%;
+//     height: 49.475262vh;
+//     .swiper-slide {
+//       opacity: 0.4;
+//     }
+//     .swiper-slide-prev,
+//     .swiper-slide-next {
+//       opacity: 0.8;
+//     }
+//     .swiper-slide-active {
+//       opacity: 1;
+//       z-index: 1000;
+//     }
+//   }
+// }
 .flex-box__content {
   padding-top: 2.998501vh;
   .flex-box__content-menu {
@@ -43,9 +43,47 @@
     }
     .selected {
       font-size: 14px;
-      color: #FF9C0F;
-      border-bottom: 2px #FF9C0F solid;
+      color: #ff9c0f;
+      border-bottom: 2px #ff9c0f solid;
     }
   }
-  
+}
+.swiper {
+  height: 49.47vh;
+  // width: auto;
+  // overflow-x: auto;
+  // display: flex;
+  // overflow: hidden;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  // }
+  .scroll {
+    position: relative;
+    .swiper__item {
+      position: absolute;
+      margin: 10vh 10vw;
+      padding: 2.398801vh 11.2vw;
+      width: 78.666667vw;
+      box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.06);
+      border-radius: 6px;
+      img {
+        width: 56.533333vw;
+        height: 32.233883vh;
+      }
+    }
+    .list-enter-to {
+      transition: all 2s ease;
+      transform: translateX(0);
+    }
+    .list-leave-active {
+      transition: all 2s ease;
+      transform: translateX(-100%);
+    }
+    .list-enter {
+      transform: translateX(100%);
+    }
+    .list-leave {
+      transform: translateX(0);
+    }
+  }
 }
