--- a/components/home-page/application-direction/ApplicationDirection.scss
+++ b/components/home-page/application-direction/ApplicationDirection.scss
@@ -1,33 +1,20 @@
 @import '~@/assets/styles/common/itemLayout.scss';
-// ::v-deep .swiper {
-//   height: 49.475262vh;
-//   width: 100vw;
-//   .swiper__item{
-//     padding: 2.398801vh 11.2vw;
-//     width: 78.666667vw;
-//     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 1);
-//     border-radius: 6px;
-//     img {
-//       width: 56.533333vw;
-//       height: 32.233883vh;
-//     }
-//   }
-//   .swiper-container {
-//     width: 100%;
-//     height: 49.475262vh;
-//     .swiper-slide {
-//       opacity: 0.4;
-//     }
-//     .swiper-slide-prev,
-//     .swiper-slide-next {
-//       opacity: 0.8;
-//     }
-//     .swiper-slide-active {
-//       opacity: 1;
-//       z-index: 1000;
-//     }
-//   }
-// }
+.flex-box {
+  padding-top: 4.947526vh;
+  background: url('~@/assets/images/homePage/app-dir-bg.png') no-repeat;
+  background-size: contain;
+  .flex-box__title {
+    .flex-box__title--main{
+      color: #fff;
+      &::after {
+        background-color: #666;
+      }
+    }
+    .flex-box__title--sub {
+      color: #aaa;
+    }
+  }
+}
 .flex-box__content {
   padding-top: 2.998501vh;
   .flex-box__content-menu {
@@ -50,53 +37,36 @@
 }
 .swiper {
   position: relative;
-  height: 49.47vh;
-  // width: auto;
-  // overflow-x: auto;
   display: flex;
   overflow: hidden;
-  // &::-webkit-scrollbar {
-  //   display: none;
-  // }
-  .swiper__item {
+  margin: 2.49925vh 0;
+  height: 50.227886vh;
+  justify-content: center;
+  .swiper-container {
     position: absolute;
+    width: 100vw;
     transition: all 0.5s;
-    margin: 10vh 10vw;
-    padding: 2.398801vh 11.2vw;
-    width: 78.666667vw;
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.06);
-    border-radius: 6px;
-    img {
-      width: 56.533333vw;
-      height: 32.233883vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .swiper__item {
+      padding: 2.14vh 8vw;
+      width: 70.32vw;
+      height: 44.227886vh;
+      box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.06);
+      border-radius: 6px;
+      background: url('~@/assets/images/homePage/app-dir-item.png') no-repeat;
+      background-size: contain;
+      background-color: #fff;
+      img {
+        width: 50vw;
+        height: 28.78vh;
+      }
+      div {
+        font-size: 3.2vw;
+        line-height: 3.598201vh;
+      }
     }
-  // .scroll {
-  //   position: relative;
-  //   .swiper__item {
-  //     position: absolute;
-  //     margin: 10vh 10vw;
-  //     padding: 2.398801vh 11.2vw;
-  //     width: 78.666667vw;
-  //     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.06);
-  //     border-radius: 6px;
-  //     img {
-  //       width: 56.533333vw;
-  //       height: 32.233883vh;
-  //     }
-  //   }
-    // .list-enter-to {
-    //   transition: all 2s ease;
-    //   transform: translateX(0);
-    // }
-    // .list-leave-active {
-    //   transition: all 2s ease;
-    //   transform: translateX(-100%);
-    // }
-    // .list-enter {
-    //   transform: translateX(100%);
-    // }
-    // .list-leave {
-    //   transform: translateX(0);
-    // }
   }
+
 }
